test/sema/generics/generic_struct_contains_itself.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
// CHECK: [[# @LINE + 1 ]]:1: error: struct 'S' contains itself
struct S<T> { x: S<T> }

fn main(): unit {}

// CHECK-NOT: {{.*error.*}}
